added the gitignore file updated

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,1 +1,28 @@
-venv
+db.sqlite3
+
+# Ignore compiled Python files
+*.pyc
+*.pyo
+__pycache__/
+
+# Ignore environment variables and sensitive files
+.env
+*.env
+
+# Ignore Virtual Environment folder
+venv/
+env/
+
+# Ignore Django migration cache files
+**/migrations/__pycache__/
+
+# Ignore logs
+logs/
+*.log
+*.out
+
+# Ignore IDE/editor-specific files
+.vscode/
+.idea/
+*.swp
+*.swo
