--- a/frontend/.vscode/extensions.json
+++ b/frontend/.vscode/extensions.json
@@ -1,5 +1,3 @@
 {
-    "recommendations": [
-        "anbuselvanrocky.bootstrap5-vscode"
-    ]
+  "recommendations": ["anbuselvanrocky.bootstrap5-vscode"]
 }
